# Airus

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/schemas/com.zaknong.airus.database.AppDatabase/: 1.json  2.json
app/src/androidTest/java/com/zaknong/airus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  airus_engine.cpp  native-lib.cpp
app/src/main/cpp/audio/: GaplessPlayer.cpp  OboeEngine.cpp  UsbAudioDriver.cpp
app/src/main/cpp/decoder/: DsdDecoder.cpp  DsdDecoder.h  FlacDecoder.cpp  FlacDecoder.h  WavDecoder.cpp  WavDecoder.h
app/src/main/cpp/dsp/: Crossfeed.cpp  ParametricEQ.cpp  ReplayGain.cpp
app/src/main/java/com/zaknong/airus/database/: AppDatabase.java
app/src/main/java/com/zaknong/airus/database/dao/: AlbumDao.java  EqPresetDao.java  PlaylistDao.java  ScanFolderDao.java  SongDao.java
app/src/main/java/com/zaknong/airus/database/entity/: Album.java  EqPreset.java  Playlist.java  (+3 more)
app/src/main/java/com/zaknong/airus/engine/: AudioEngine.java  AudioFormatRouter.java  GaplessBuffer_DoP.h  MediaCodecDecoder.java  UsbDacManager.java
app/src/main/java/com/zaknong/airus/permissions/: PermissionManager.java
app/src/main/java/com/zaknong/airus/scanner/: MediaScanner.java  ScanManager.java  TagEnricher.java
app/src/main/java/com/zaknong/airus/service/: AudioFocusManager.java  MediaSessionManager.java  NotificationBuilder.java  PlayerService.java  PlayerState.java
app/src/main/java/com/zaknong/airus/ui/: AlbumsFragment.java  ArtistsFragment.java  BottomSheetPlayer.kt  EqFragment.java  FolderBrowserFragment.java  HomeScreen.kt  LibraryFragment.java  LibraryScreen.kt  MainActivity.java  MainActivity.kt  NowPlayingFragment.java  PlaylistsFragment.java  QueueScreen.kt  ScanFoldersScreen.kt  Screens.kt  SearchScreen.kt  SongsFragment.java
app/src/main/res/anim/: slide_down_fade.xml
app/src/main/res/color/: selector_nav_item.xml
app/src/main/res/drawable/: bg_badge.xml  bg_badge_bitperfect.xml  bg_card_dark.xml  bg_drag_handle.xml  bg_mesh_gradient.xml  ic_airus_notification.xml  ic_album.xml  ic_bitperfect_active.xml  ic_crossfeed.xml  ic_default_album_art.xml  ic_eq.xml  ic_grid.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_library.xml  ic_notification.xml  ic_playlist.xml  ic_repeat_off.xml  ic_replaygain.xml  ic_skip_next.xml  ic_skip_previous.xml  seekbar_thumb.xml
app/src/main/res/layout/: activity_main.xml  dialog_save_preset.xml  fragment_eq.xml  fragment_folder_browser.xml  fragment_library.xml  fragment_now_playing.xml  fragment_playlists.xml  fragment_songs.xml  item_album.xml  item_artist.xml  item_folder.xml  item_playlist.xml  item_song.xml  layout_now_playing_bar.xml
app/src/main/res/menu/: menu_bottom_nav.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/com/zaknong/airus/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
